# vault

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  storage.py  upload.py
tests/: test_cli_smoke.py  test_config.py  test_storage.py  test_upload.py
